--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Lasagna Recipe</title>
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../images/lasagna.webp">
+    <img class="demo" src="../images/lasagna.webp">
     <h2>Description</h2>
     <p>Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù, béchamel sauce, vegetables, cheeses, and seasonings and spices.</p>
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 id="Ingredients">Ingredients</h2>
+    <ul class="list noorder">
         <li>Meat</li>
         <li>Onion and garlic</li>
         <li>Tomato products</li>
@@ -22,10 +23,10 @@
         <li>Egg</li>
     </ul>
     <h2>Steps</h2>
-    <ol>
+    <ol class="list order">
         <li>Make the meat sauce.</li>
         <li>Cook the noodles.</li>
-        <li>Make the ricotta mixture.</li>
+        <li id="emphasis">Make the ricotta mixture.</li>
         <li>Layer the lasagna according to the recipe instructions.</li>
         <li>Cover with foil and bake.</li>
         <li>Let it rest.</li>
